TEST_PROGRAMS/VALID/09/if_statements.go
package if_statements

func main() {
    if false {

    }

    if pre := 1; true {

    } else {

    }
}
