TEST_PROGRAMS/INVALID/11/test10.go
package main

func main() {
	switch ;;{
		case true:
			fmt.Println("Hello, 世界")
		case false:
			fmt.Println("Hello, 世界")
	}
}
